tests/types/errors/foreach_dict_requires_explicit_projection.mog
var dict Dict<str, i32> = {"b": 2, "a": 1}
for (var key str : dict) {
  print(key)
}
